--- a/vis_and_eda.Rmd
+++ b/vis_and_eda.Rmd
@@ -123,3 +123,21 @@ weather_df %>%
   geom_density_ridges()
 ```
 
+## saving a plot
+
+```{r}
+ggp_ridges_temp = 
+  weather_df %>% 
+  ggplot(aes(x = tmax, y = name)) +
+  geom_density_ridges()
+
+ggsave("ggplot_temp_ridge.pdf", ggp_ridges_temp)
+```
+
+```{r, fig.width = 12}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .4) +
+  geom_smooth(se = FALSE)
+```
+
